--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
+    <title>Prank website</title>
     <style>
         body {
             display: flex;
@@ -21,6 +21,6 @@
     </style>
 </head>
 <body>
-    <h1>Ты лох!</h1>
+    <h1>Ты лох!Таково твоё призвание.</h1>
 </body>
 </html>
