--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prank website</title>
+    <title>Prank Site</title>
     <style>
         body {
             display: flex;
@@ -11,16 +11,16 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
             background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
         }
         h1 {
-            font-size: 48px;
             color: #333;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Ты лох!</h1>
+    <h1>Ты лох! Таково твоё призвание! 🤣</h1>
 </body>
 </html>
